some quick fixes
