# backend/masterdata-service/src/main/java/com/adrasha/masterdata/controller/LocationController.java
@@ -1,11 +1,9 @@
 package com.adrasha.masterdata.controller;
 
 import java.net.URI;
-import java.util.Map;
 import java.util.UUID;
 
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Example;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -40,9 +38,11 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 
 @RestController
 @RequestMapping("/masterdata/locations")
+@RequiredArgsConstructor
 @SecurityRequirement(name = "BearerAuthentication")
 @Tag(name = "Location")
 @ApiResponses({
@@ -53,11 +53,8 @@ import jakarta.validation.Valid;
 public class LocationController {
 
 
-	@Autowired
-    private LocationService locationService;
-
-    @Autowired
-    private ModelMapper mapper;
+    private final LocationService locationService;
+    private final ModelMapper mapper;
 
     @GetMapping
 	@ApiResponse(responseCode = "200", content = @Content(schema = @Schema(implementation = LocationPageResponseDTO.class)))
@@ -78,15 +75,14 @@ public class LocationController {
     }
     
 	@GetMapping("/count")
-	@ApiResponse(responseCode = "200", content = @Content(schema = @Schema(implementation = Map.class)))
+	@ApiResponse(responseCode = "200", content = @Content(schema = @Schema(implementation = Long.class)))
 	@ApiResponse(responseCode = "400", content = @Content(schema = @Schema(implementation = ValidationErrorResponse.class)))
-	public Map<String, Long> getTotalCount(LocationFilterDTO filterDTO) {
+	public Long getTotalCount(LocationFilterDTO filterDTO) {
 		Location filter = mapper.map(filterDTO, Location.class);
 
 		Example<Location> example = Example.of(filter, ExampleMatcherUtils.getDefaultMatcher());
 
-		long total = locationService.getCount(example);
-		return Map.of("count", total);
+		return locationService.getCount(example);
 	}
 
     @GetMapping("/{id}")
